
Version 1.3.1
-------------

- fixed assertion failure when viewing source files in builtin viewer
- fixed wrong escaping of backslashes in X-Poedit-* headers
 

Version 1.3.0
-------------

- plural forms support (based on patch by Christophe Hermier and Guido Flohr)
- fixed catalog I/O to correctly handle automatic comments (Tim Dijkstra)
- [Win32] visual improvements to main window (Tim Kosse)
- usability improvements
- fixed storing of non-ASCII catalog headers
- poEdit now preserves non-standard entries in PO file header
- poEdit now respects c-format and no-c-format when checking tokens correctness
- position in translations list is no longer lost when saving the file
- configure now correctly detects libdb4 with versioned symbols
- "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
- use msgfmt for tokens validation
- double-clicking on invalid entry now pops up error description
- [Unix] use GNOME theme icons if they are installed on the system
- [Unix] use GtkSpell for spell checking (GTK+ 2 only)
- poEdit no longer saves .po.poedit file, the headers were moved into
  custom X-Poedit-* fields in .po file header
- added more translations:
     Punjabi (Amanpreet Singh Alam)
     Albanian (Besnik Bleta)
     Amharic (Tegegne Tefera)
     Hindi (Dhananjaya Sharma)
     Esperanto (Tim Morley)
     Belarusian (Siarhei)
     Breton (Korvigellou an Drouizig)
     Walloon (Pablo Saratxaga)
     Bangla (Omi Azad)
     Basque (3ARRANO Euskalgintza Taldea)


Version 1.2.5
-------------

- added catalog export to HTML (Christophe Hermier)
- fixed bug in displaying list entries in ANSI build introduced in 1.2.4
- fixed opening of source files specified using absolute path
- poEdit now preserves fuzzy status if set after partially editing an entry
- many fixes to comment window (Olivier Sannier)
- comment window is now (optionally) editable (Olivier Sannier)
- fixed preferences dialog if translation memory is not used (Olivier Sannier)