@@ -10,6 +10,7 @@ Patches:
   Tim Kosse <botg@users.sourceforge.net>
   Sergio Talens-Oliag <Sergio.Talens@uv.es>
   Guido Flohr <guido@imperia.net>
+  Shane Harper <shaneharper@users.sourceforge.net>
 
 Translations:
   Traditional Chinese:  Leo Liaw <leo@mis.ccu.edu.tw> 
