@@ -25,6 +25,7 @@
 <br>Tim Kosse
 <br>Sergio Talens-Oliag
 <br>Guido Flohr
+<br>Shane Harper
 <p>
 <b>Icons Copyright (c) 1998 Dean S. Jones</b>
 <br>dean@gallant.com; http://www.gallant.com/icons.htm
