@@ -4,6 +4,7 @@ Version 1.3.1
 
 - fixed assertion failure when viewing source files in builtin viewer
 - fixed wrong escaping of backslashes in X-Poedit-* headers
+- fixed parsing of references to filenames containing spaces (Shane Harper)
  
 
 Version 1.3.0
